--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -1,21 +1,23 @@
 {
   "name": "Tattvam",
   "short_name": "Tattvam",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#F8FAFC",
+  "orientation": "portrait",
+  "background_color": "#ffffff",
   "theme_color": "#00C897",
-  "description": "Discover the true essence of your food.",
   "icons": [
     {
-      "src": "https://placehold.co/192x192/00C897/FFFFFF?text=Tv",
+      "src": "logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "https://placehold.co/512x512/00C897/FFFFFF?text=Tv",
+      "src": "logo.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
