--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,39 @@
+# ========================
+# Node.js & Dependencies
+# ========================
 node_modules/
 **/node_modules/
-backend/node_modules/
+
+# ========================
+# Security (API Keys) - VERY IMPORTANT
+# ========================
 .env
+.env.*
 backend/.env
+tattvam-mobile/.env
+
+# ========================
+# Logs
+# ========================
 logs/
 *.log
+npm-debug.log*
+yarn-error.log*
+
+# ========================
+# Expo & React Native
+# ========================
+.expo/
+tattvam-mobile/.expo/
+web-build/
+dist/
+
+# Agar kabhi bare workflow use kiya toh
+tattvam-mobile/android/
+tattvam-mobile/ios/
+
+# ========================
+# OS Generated Files
+# ========================
+.DS_Store
+Thumbs.db
